# egui_wgpu_backend

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
src/: lib.rs
src/shader/: egui-web.vert  egui-web.vert.spirv  egui.frag  egui.frag.spirv  egui.vert  egui.vert.spirv  egui.wgsl
