[package]
name = "egui_wgpu_backend"
version = "0.27.0"
authors = ["Nils Hasenbanck <nils@hasenbanck.de>"]
edition = "2018"
description = "Backend code to use egui with wgpu."
homepage = "https://github.com/hasenbanck/egui_wgpu_backend"
repository = "https://github.com/hasenbanck/egui_wgpu_backend"
license = "MIT OR Apache-2.0"
readme = "README.md"
resolver = "2"

[features]
default = []
web = []

[dependencies]
egui = { version = "0.23", features = ["bytemuck"] }
wgpu = "0.18"
bytemuck = "1.13"
